# src/main/java/com/xeno/teensy/controller/CardController.java
@@ -3,6 +3,7 @@ package com.xeno.teensy.controller;
 import com.xeno.teensy.service.CardService;
 import io.tej.SwaggerCodgen.api.CardApi;
 import io.tej.SwaggerCodgen.model.*;
+import org.apache.coyote.Response;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.CrossOrigin;
@@ -34,12 +35,17 @@ public class CardController implements CardApi {
     }
 
     @Override
-    public ResponseEntity<CardResponse> editCard(UpdateCardDto updateCardDto) {
-        return null;
+    public ResponseEntity<List<CardResponse>> getGroupCards(Integer groupId) {
+        return ResponseEntity.ok(cardService.getGroupCards(groupId));
     }
 
     @Override
-    public ResponseEntity<List<CardResponse>> getGroupCards(Integer groupId) {
-        return ResponseEntity.ok(cardService.getGroupCards(groupId));
+    public ResponseEntity<CardResponse> getCardInfo(Integer cardId) {
+        return ResponseEntity.ok(cardService.getCard(cardId));
+    }
+
+    @Override
+    public ResponseEntity<CardResponse> editCard(Integer cardId, UpdateCardDto updateCardDto) {
+        return ResponseEntity.ok(cardService.editCard(cardId, updateCardDto));
     }
 }
