# target/classes/openapi.yml
@@ -215,6 +215,7 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/CardResponse'
+  /card/{cardId}:
     patch:
       summary: Edit the Card
       operationId: editCard
@@ -232,7 +233,13 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CardResponse'
-  /card/{cardId}:
+      parameters:
+        - name: cardId
+          in: path
+          description: Id of card
+          required: true
+          schema:
+            type: integer
     delete:
       summary: Delete selected card
       operationId: deleteCard()
@@ -250,7 +257,24 @@ paths:
           required: true
           schema:
             type: integer
-  /card/{groupId}:
+    get:
+      summary: Get Card Info
+      operationId: getCardInfo
+      responses:
+        200:
+          description: Get Card Info
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/CardResponse'
+      parameters:
+        - name: cardId
+          in: path
+          description: Id of card
+          required: true
+          schema:
+            type: integer
+  /card/bygroup/{groupId}:
     get:
       summary: Delete selected card
       operationId: getGroupCards
